<resources>
    <string name="app_name">Vezbanje1</string>

    <string name="settings">Settings</string>
    <string name="add">Add</string>
    <string name="attach">Attach</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="banking">Banking</string>
    <string name="check_your_bank_activities">Check your Bank activities</string>
    <string name="idea">Idea</string>
    <string name="todo">TODO</string>
    <string name="contact">contact</string>
    <string name="app_name_toolbar">Toolbar</string>
    <string name="action_settings">action_settings</string>
    <string name="action_about">action_about</string>
    <string name="action_add">action_add</string>
    <string name="alert_dialog">Autor aplikacije: Milan Malovic</string>
    <string name="alert_button_ok">OK</string>


</resources>
